--- a/WebApplication_02/web/register.html
+++ b/WebApplication_02/web/register.html
@@ -38,8 +38,8 @@ and open the template in the editor.
                 <tr>
                     <td>Gender</td>
                     <td>
-                        <input type="radio" name="gender" id="male" value="Male" />
-                        <input type="radio" name="gender" id="female" value="Female" />
+                        <input type="radio" name="gender" id="male" value="Male" /> Male <br/>
+                        <input type="radio" name="gender" id="female" value="Female" /> Female <br/>
                     </td>
                 </tr>
                 <tr>
